--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,38 @@
-streamlit>=1.28.0
+# Web framework
+streamlit==1.28.2
 
-pandas>=1.5.0
-numpy>=1.21.0
+# Data handling
+pandas==1.5.3
+numpy==1.23.5
 
-matplotlib>=3.5.0
-seaborn>=0.11.0
-wordcloud>=1.9.0
+# Visualization
+matplotlib==3.5.3
+seaborn==0.12.2
+wordcloud==1.9.2
 
-openai>=1.0.0
+# Excel
+openpyxl==3.1.2
 
-openpyxl>=3.0.0
+# Date parsing
+python-dateutil==2.8.2
 
-Pillow>=9.0.0
+# NLP
+nltk==3.8.1
+konlpy==0.6.0
+JPype1==1.4.1
+lxml==4.9.3
+langdetect==1.0.9
 
-konlpy>=0.6.0
+# Topic modeling / LDA
+gensim==4.2.0
+scipy==1.10.1
+pyLDAvis==3.4.0
 
-nltk>=3.7
+# OpenAI API
+openai==1.14.3
 
-langdetect>=1.0.9
-
-
-gensim>=4.3.0
-scipy>=1.9.0
-pyLDAvis>=3.4.0
-
-
-tqdm>=4.64.0
-
-# HTTP requests
-requests>=2.28.0
-urllib3>=1.26.0
-
-# System and utility libraries
-# os (built-in)
-# re (built-in)
-# io (built-in)
-# base64 (built-in)
-# collections (built-in)
-# traceback (built-in)
-# hashlib (built-in)
-# pickle (built-in)
-# datetime (built-in)
-# random (built-in)
-# string (built-in)
-# tempfile (built-in)
+# Others
+tqdm==4.66.2
+requests==2.31.0
+urllib3==1.26.18
+Pillow==9.5.0
